--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "564e61e1-4667-41b2-a4a2-754a0240c775"
 authors = ["David Sanders <dpsanders@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
+
 [compat]
 julia = "1"
 
