--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,9 @@
 name = "MusicTheory"
 uuid = "564e61e1-4667-41b2-a4a2-754a0240c775"
 authors = ["David Sanders <dpsanders@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.1"
 
 [deps]
-ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
-Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
-GeometryTypes = "4d00f742-c7ba-57c2-abde-4428a4b178cb"
-Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
-Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 
 [compat]
 julia = "1"
